# crypto-trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  STRATEGIES.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
deploy/: setup_vps.sh
docs/: ARCHITECTURE.md  DEPLOY.md  RUNBOOK.md
research/: __init__.py
scripts/: _carry_health_check.py  _carry_pit_universe_sweep.py  _carry_universe_robustness.py  _cascade_diagnose.py  _joint_diagnose.py  _joint_strict_sweep.py  _meanrev_relaxed.py  _probe_symbols.py  _scanner_diagnose.py  _slippage_sensitivity.py  _xpair_adf_timeline.py  aktradescalp_scanner_validate.py  backtest.py  backtest_allocator.py  backtest_cross_pairs.py  backtest_funding_carry.py  backtest_funding_carry_momentum.py  backtest_funding_carry_pit_universe.py  backtest_funding_delta.py  backtest_grid.py  backtest_long_horizon.py  backtest_macd_cross.py  backtest_oi_persistence.py  backtest_pairs.py  backtest_trader_agent.py  build_pit_universe.py  build_scanner_cache.py  cascade_param_sweep.py  cascade_pattern_validate.py  cascade_validate.py  cascade_walkforward.py  cpcv_validate.py  cpcv_validate_carry.py  cpcv_validate_dfunding.py  cpcv_validate_funding.py  cpcv_validate_meanrev.py  cpcv_validate_momentum_carry.py  cpcv_validate_pairs.py  cpcv_validate_trend.py  db-backup.sh  (+10 more)
src/: orchestrator.py
tests/: test_aktradescalp_scanner.py  test_allocator_wireup.py  test_basis_carry.py  test_choppiness.py  test_circuit_wireup.py  test_costs.py  test_cpcv.py  test_deflated_sharpe.py  test_dfunding_guard.py  test_funding_accrual.py  (+20 more)
(+177 files in other folders)
