[project]
name = "crypto-trading-agent"
version = "0.1.0"
description = "LLM-supervised intra-day crypto trading agent on Binance"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-binance>=1.0.36",
    "python-telegram-bot[job-queue]>=21.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta-classic>=0.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "feedparser>=6.0",
    "pyotp>=2.9",
    "aiolimiter>=1.1",
    "greenlet>=3.5.1",
    "asyncpg>=0.31.0",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]
talib = ["TA-Lib>=0.4.32"]  # optional; requires C dependency
# Offline ML research only (research/ml_meta/*). NOT installed in the live
# trading runtime — keep the bot's footprint lean.
research = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pyarrow>=16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
